--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -6,3 +6,20 @@ body{
 .Spacer50{
     height: 50px;
 }
+
+.back-button {
+    color: black;
+    text-decoration: none;
+    font-size: 3em;
+    font-family:'Courier New', Courier, monospace;
+    font-weight: 900;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 15%;
+    border-bottom: 1px solid rgb(219, 219, 200);
+    border-right: 1px solid rgb(219, 219, 200);
+    &:hover{
+        background-color: rgb(219, 219, 200);
+    }
+}
