--- a/src/styles/details.scss
+++ b/src/styles/details.scss
@@ -1,13 +1,4 @@
 .details {
-    .title {
-        margin: -20px 0px;
-        display: flex;
-        justify-content: center;
-        color: #5f7462;
-        font-size: 2em;
-        font-family: fancy, cursive;
-    }
-
     .information{
         display: flex;
         flex-direction: column;
@@ -19,6 +10,19 @@
             justify-content: center;
             align-items: center;
             flex-direction: column;
+            padding: 10px 0px;
+
+            .content{
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                line-height: 0px;
+
+                .spacer20{
+                    height: 20px;
+                }
+            }
         }
     }
 }
