--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,6 +1,6 @@
 body{
     margin: 0px;
-    background-color: beige;
+    background-color: #dedccf;
 }
 
 .Spacer50{
@@ -36,7 +36,7 @@ a {
     margin: -20px 0px;
     display: flex;
     justify-content: center;
-    color: #5f7462;
+    color: #40482f;
     font-size: 2em;
     font-family: fancy, cursive;
 }
