--- a/src/styles/details.scss
+++ b/src/styles/details.scss
@@ -17,8 +17,7 @@
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
-                line-height: 0px;
-
+                text-align: center;
                 .spacer20{
                     height: 20px;
                 }
