--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -17,7 +17,7 @@
     }
 
     h1{
-        color: rgb(95, 116, 98);
+        color: #40482f;
         font-size: 10;
         font-family: fancy, cursive;
         font-size: 3em;
@@ -39,7 +39,7 @@
             font-family: fancy, cursive;
             font-size: 3em;
             text-decoration: none;
-            color: rgb(95, 116, 98);
+            color: #40482f;
             background-color: black;
             width: 6em;
             height: 4em;
